--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-http": "*",
+        "ext-json": "*",
+        "ext-simplexml": "*",
+        "ext-soap": "*",
+        "artisaninweb/laravel-soap": "0.3.0.9",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
@@ -18,10 +23,7 @@
         "laravel/ui": "^2.0",
         "league/omnipay": "^3.0",
         "omnipay/paypal": "^3.0",
-        "stripe/stripe-php": "^7.36",
-      "ext-json": "*",
-        "ext-http": "*",
-        "ext-simplexml": "*"
+        "stripe/stripe-php": "^7.36"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
