--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,22 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
-        "ext-http": "*",
         "ext-json": "*",
         "ext-simplexml": "*",
-        "ext-soap": "*",
-        "artisaninweb/laravel-soap": "0.3.0.9",
+        "dannyvankooten/laravel-vat": "*",
+        "dannyvankooten/vat.php": "^2.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "ibericode/vat": "^2.0",
+        "ibericode/vat-bundle": "^2.0",
         "laravel/cashier": "^11.2",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "league/omnipay": "^3.0",
         "omnipay/paypal": "^3.0",
+        "php-http/curl-client": "^2.1",
         "stripe/stripe-php": "^7.36"
     },
     "require-dev": {
